scode/geekling/prob15/error.txt
main.c: In function 'main':
main.c:16:13: error: 'k' undeclared (first use in this function)
   16 |         if (k==1) {d++;
      |             ^
main.c:16:13: note: each undeclared identifier is reported only once for each function it appears in
main.c:16:20: error: 'd' undeclared (first use in this function)
   16 |         if (k==1) {d++;
      |                    ^
